--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+  //  sessionStorage.setItem("isAuthenticated", true);
+  //  sessionStorage.setItem("user", JSON.stringify({"username":"carltonfoo","password":"foofoo"}));
+  //  sessionStorage.setItem("isAuthenticated", false);
+  //  sessionStorage.setItem("user", JSON.stringify({"username":"","password":""}));
+  </script>
 </html>
