fetched api successfullty from welfare approval

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,6 +42,6 @@
   </body>
   <script>
     sessionStorage.setItem("isAuthenticated", true);
-    sessionStorage.setItem("user", JSON.stringify({"username":"carltonfoo", "password":"foofoo"}));
+    sessionStorage.setItem("user", JSON.stringify({"username":"bellesim", "password":"beierbeier"}));
   </script>
 </html>
